# VibeCopilot

./: .cursorindexingignore  .env.example  .env.sample  .flake8  .gitignore  .gitmodules  .markdownlint.json  .npmrc  .pre-commit-config.yaml  .uvconfig  .windsurfrules  CHANGELOG.md  CONTRIBUTING.md  DIRECTORY_STRUCTURE.md  LICENSE  README.md  activate-vibe  cursor.rules  diagnostic_edit.py  direct_edit.py  exact_edit.py  fix_help_text.py  fix_rule_param.py  fix_rule_params.py  fix_with_lineno.py  how_to_work.md  init.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pytest.ini  report.md  requirements.txt  rule_command.py.bak  setup.py  test.md  test_github_command.py  test_md_lint.md  (+6 more)
.ai/: arch.md  prd.md  status.json  vibecopilot.db
.ai/architecture/: example-arch.md
.ai/cache/: current_story.json  current_task.json
.ai/conversation/: gitdiagram-integration.md
.ai/conversations/: memory_tutorial_20240401.md  perplexity_config_20240401.md  tool_testing_20240401.md  tool_testing_conversation.md
.ai/data/: gitmap_based_roadmap.md  roadmap_comparison.md  roadmap_implementation_guide.md  updated_roadmap.yaml
.ai/docs/: workflow-refact-roadmap.md  workflow-roadmap.yaml
.ai/epic-1/: story-1.story.md
.ai/epics/: epic-example.md
.ai/gitmap_output/: project_diagram.md  project_explanation.md
.ai/knowledge_graph/: VibeCopilot.md  VibeCopilot_architecture.md  _relations.md  index.md
.ai/prd/: example-feature.md  prd-rule-template-engine.md
.ai/reports/: progress.md  update_log.md
.ai/roadmap/: cddrg_engine.yaml  cddrg_engine_converted.yaml  cddrg_engine_roadmap.yaml  cddrg_progress_report.md  cli_command_enhancement_roadmap.yaml  config.yaml  current.yaml  rule_engine_roadmap.yaml  rule_engine_roadmap_fixed.yaml  test_roadmap.yaml  test_roadmap.yaml.backup  test_roadmap.yaml.json_result  test_roadmap.yaml.structured  vibe_copilot_roadmap.yaml  workflow-refact-roadmap.yaml
.ai/stories/: Story-1.md  Story-2.md  Story-3.md  Story-4.md  Story-5.md  Story-6.md  Story-7.md  Story-8.md  Story-9.md  example-story.md  story-example.md
.ai/tasks/: STATUS.md  T-DE-01.md  T-MM-01.md  T-MM-02.md  T-MM-03.md  T-MM-04.md  T-MM-05.md  task-create-dirs.md  task-create-files.md
.ai/workflow/: simple-task.json  task.json
.cline/: vibe_config.mdc
.cursor/: mcp.json  mcp.json.example  modes.json
.cursor/bak-rules/: concept.mdc
.cursor/rules/: act-command.mdc  developguid.mdc  modes.json  plan-command.mdc  test_rule.mdc
.cursor/templates/: template-arch.md  template-prd.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  project_automation.yml  roadmap-update.yml  sync-to-basic-memory.yml  test-all.yml
.repomix/: bundles.json
.repomix/config/: copilot-repomix.config.json
.repomix/instructions/: roadmap-instructions.md
.roo/: mcp.json
.vibecopilot/: state.json
adapters/: README.md  __init__.py  docs_engine.py  rule_engine.py  status_sync_adapter.py
adapters/basic_memory/: README.md  __init__.py  base.py  cli.py  import_docs.sh  langchain_parser.py  parse_single.py
adapters/content_parser/: README.md  __init__.py  base_parser.py  content_parser.py  ollama_parser.py  openai_parser.py  parser_factory.py  utils.py
adapters/docker_memory/: export_memory_graph.py  readme.md
adapters/docs/: README.md
adapters/docusaurus/: README.md  __init__.py  cli.py  index_generator.py  obsidian_converter.py
adapters/gitdiagram/: analyze.py  gitmap.sh
adapters/github_project/: README.md  __init__.py  cli.py  manage_project.py  weekly_update.sh
adapters/n8n/: __init__.py  adapter.py  n8n_adapter.py
adapters/notion_to_md/: exporter.ts  markdown-converter.ts  notion-client.ts  package.json  run.js  types.ts  utils.ts
adapters/obsidian/: README.md  __init__.py  cli.py  syntax_checker.py
adapters/projects/: __init__.py  main.py  roadmap.py
adapters/roadmap_sync/: __init__.py  models.py  test_sync.py
adapters/rule_parser/: README.md  __init__.py  base_parser.py  main.py  ollama_rule_parser.py  openai_rule_parser.py  parser_factory.py  utils.py
adapters/status_sync/: __init__.py  adapter.py
backup/roadmap_new/: MIGRATION.md  README.md  __init__.py  __main__.py  roadmap_click.py
bak/basic_memory/: __init__.py  config.py  readmd.md
bak/content_parser/: README.md  (+5 more)
cddrg_engine/: .gitignore  .uvconfig  LICENSE  README.md  init_project.py  pyproject.toml  setup.py
cddrg_engine/cddrg_engine/: __init__.py  config.py  engine.py
cddrg_engine/examples/: basic_usage.py
cddrg_engine/tests/: __init__.py  test_config.py  test_engine.py
config/: .env.example  .env.notion.example  README.md  docs_config.json  example.env  logging.yaml
data/: roadmap.yaml  vibecopilot.db # ** REQUIRED: Set your actual absolute path **
docs/: 1_Project_Requirements_Document_PRD.md  2_App_Flow.md  3_Tech_Stack.md  5_Backend_Structure.md  6_AI_Rules.md  8_Best_Practices.md  9_Development_Roadmap.md  README.md  development-blog-template-fix.md  github_projects_guide.md  github_projects_setup.md  index.md  init.md
examples/: docs_engine_demo.py  init_template_db.py  memory_integration_example.py  parsing_example.py  rule_repository_example.py  simple-task.md  test_direct_llm.py  test_roadmap_import.py
reports/: .gitkeep
scripts/: README.md  add_issues_to_project.py  compare_directories.py  export_notion.ts  find_big_file.sh  fix_empty_links.py  github_cli.py  github_projects.py  import_roadmap_to_github.py  merge_commands.py  roadmap_progress.py  run_export_notion.sh  sync_ai_docs.py  test_llm_temp_dir.py  test_roadmap_new.py  test_roadmap_parser.py  update_memory_schema.py
src/: __init__.py  exceptions.py  main.py  readme.md
temp/: memory_graph.json
templates/: README.md  __init__.py  api.md
test_outputs/: sample_roadmap.md  sample_roadmap.yaml
tests/: conftest.py  test_commands.py  test_flake8.py  # 可选：用于验证 flake8 配置的测试文件
user-rules/: act.mdc  plan.mdc
vibecopilot/: main.py
website/: .gitignore  docusaurus.config.js  docusaurus.config.ts  package.json  sidebars.js  sidebars.ts
(+1835 files in other folders)
