[project]
name = "vibe-copilot"
version = "0.1.0"
description = "VibeCopilot - AI辅助开发工具"
authors = [
    {name = "Jacob Chen", email = "jacob@example.com"},
]
dependencies = [
    # Core dependencies
    "pydantic>=2.5.0",
    "typer>=0.9.0",
    "rich>=13.4.0",
    "jinja2>=3.1.2",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "tenacity>=8.2.0",
    "click>=8.1.3",
    "mcp>=1.6.0",
    "jsonschema>=4.23.0",
    # AI integration
    "langchain>=0.0.334",
    "langchain-openai>=0.0.2",
    "langchain-community>=0.0.10",
    # Vector databases and embeddings
    # "chromadb>=0.4.18",
    # "sentence-transformers>=2.2.2",
    # Document processing
    "unstructured>=0.10.30",
    "markdown>=3.4.4",
    "beautifulsoup4>=4.12.2",
    "python-frontmatter>=1.0.0",
    # Database
    "sqlalchemy>=2.0.20",
    # Date and time handling
    "python-dateutil>=2.9.0",
    # Logging
    "loguru>=0.7.3",
    "json-repair>=0.42.0",
    "tabulate>=0.9.0",
    "gitpython>=3.1.44",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.9.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "flake8>=6.1.0",
    "tabulate>=0.9.0",
    "pre-commit>=3.4.0",
]
docs = [
    "mkdocs>=1.5.2",
    "mkdocs-material>=9.2.5",
]

[project.scripts]
vibecopilot = "src.cli.main:main"
vibe-copilot-mcp = "src.cursor.server:main"
health = "src.health.cli:main"
docs = "src.docs_engine.cli:main"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
