[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cddrg_engine"
version = "0.1.0"
description = "引擎库，用于动态规则生成和知识检索"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = {file = "LICENSE"}
authors = [
    {name = "VibeCopilot Contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2.6.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.2",
    "langchain-community>=0.0.15",
    "llama-index>=0.9.0",
    "sentence-transformers>=2.2.2",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "chromadb>=0.4.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.8",
    "mypy>=1.7.1",
    "black>=23.11.0",
]
docs = [
    "sphinx>=7.2.6",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
]

[project.urls]
"Repository" = "https://github.com/jacobcy/VibeCopilot"
"Documentation" = "https://docs.example.com/cddrg_engine"
"Bug Tracker" = "https://github.com/jacobcy/VibeCopilot/issues"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "B", "W", "I", "C90", "N", "D", "UP", "ANN", "S", "BLE", "A", "COM", "C4", "T10", "ISC", "ICN"]
ignore = ["D203", "D213", "ANN101", "ANN102"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.black]
line-length = 100
target-version = ['py311', 'py312']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = "--cov=cddrg_engine --cov-report=term-missing"

[tool.uv]
excludes = [".git", "__pycache__", "*.pyc", ".tox", ".venv"]
